# cdsp-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clap-validator.sln  meson.build  meson_options.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: FindCairo.cmake
lib/: app.c  app.h  cdsp-app.h  cdsp-debug-utils.h  clap-adapters.c  clap-adapters.h  clap-extensions-adapters.c  clap-extensions-adapters.h  clap-features-adapters.c  clap-features-adapters.h  clap-gui-adapters.c  clap-gui-adapters.h  dsp.h  gui.c  gui.h
src/: clap_app.def  main.c  minimal_plugin.c
tests/: test_app.c  test_clap_adapters.c  test_clap_extensions_adapters.c  test_clap_features.c  test_clap_gui_adapters.c  test_dsp.c
